# Agentic-Mixed-Precision-Demo

./: .gitignore  CMakeLists.txt  README.md  requirements-argo-agent.txt  run-argo.sh  targets.json  workflow.json
build_logs/: kokkos.stderr.txt  kokkos.stdout.txt
docs/: ARGO_AGENT.md  DESIGN.md  TODO.md
driver/: ddilog_driver.cc
experiments/ddilog/: .gitignore  ddilog_experiment_floatA_10_123.csv  ddilog_smoke_fail_numeric_10_123.csv  ddilog_smoke_fail_seed_mismatch_10_122.csv  ddilog_smoke_pass_10_123.csv
experiments/specs/: target_specs_curated_v1.json
llm_agent/: __init__.py  argo_client.py  cli.py  client.py  config.py  onboard_target.py  patch_proposer.py  patch_verify.py  run.py  run_episode.py  run_greedy_episode.py  state.py
llm_agent/graphs/: __init__.py  orchestrator.py
llm_agent/skills/: __init__.py
llm_agent/skills/analyze/: __init__.py  graph.py  prompts.py
llm_agent/skills/downcast/: __init__.py  graph.py  prompts.py
llm_agent/skills/driver/: __init__.py  graph.py  prompts.py
llm_agent/tools/: __init__.py  build.py  compare.py  spec_revise.py
patches/ddilog/: A.patch  ALFA.patch  B0.patch  B1.patch  B2.patch  H.patch  S.patch  T.patch  Y.patch
scripts/: apply_ddilog_patch.sh  apply_mutation_patch.py  build_with_Kokkos.sh  compare_results.py  compile.sh  ddilog_mutation_combo_greedy.py  ddilog_mutation_sweep.py  mutation_combo_greedy.py  mutation_ops.py  mutation_sweep.py  mutation_trial.py  run_ddilog_experiment.sh  run_experiment.sh  setup_argo_proxy.sh  targets_lib.py
src/: kokkosUtils.h  kokkosUtils.h.orig
